fix(Row): should enable flex wrap (#7332)

--- a/src/row/index.less
+++ b/src/row/index.less
@@ -9,6 +9,7 @@
 
   &--flex {
     display: flex;
+    flex-wrap: wrap;
 
     &::after {
       display: none;
